--- a/app/src/main/res/drawable/bubble_left.xml
+++ b/app/src/main/res/drawable/bubble_left.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="16dp" />
-    <solid android:color="#A4DFC1" /> <!-- Màu nền -->
+    <solid android:color="#7DF9FF" /> <!-- Màu nền -->
     <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp"/>
 </shape>
