--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,6 +92,7 @@
         android:layout_marginTop="12dp"
         android:backgroundTint="@android:color/holo_blue_dark"
         android:text="Login"
+        android:background="@drawable/rounded_button"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
