--- a/app/src/main/res/layout/item_test_question.xml
+++ b/app/src/main/res/layout/item_test_question.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="16sp"
+        android:textIsSelectable="true"
         android:text="Câu 1:"/>
 
     <TextView
