--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -23,5 +23,6 @@
         android:background="@drawable/bubble_right"
         android:padding="10dp"
         android:textColor="#FFFFFF"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textIsSelectable="true" />
 </LinearLayout>
