--- a/app/src/main/res/layout/item_message_other.xml
+++ b/app/src/main/res/layout/item_message_other.xml
@@ -23,5 +23,6 @@
         android:background="@drawable/bubble_left"
         android:textColor="#000000"
         android:textSize="16sp"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:textIsSelectable="true"/>
 </LinearLayout>
