--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -23,15 +23,8 @@
             android:orientation="vertical"
             android:padding="16dp"/>
     </ScrollView>
-    <ProgressBar
-        android:id="@+id/progressBarTest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+
+
     <Button
         android:id="@+id/buttonSubmitTest"
         android:layout_width="0dp"
@@ -57,16 +50,16 @@
 
     <TextView
         android:id="@+id/textViewTestResult"
-        android:layout_width="104dp"
-        android:layout_height="70dp"
+        android:layout_width="180dp"
+        android:layout_height="709dp"
+        android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/buttonSubmitTest"
-        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Kết quả: 3/5" />
 
     <EditText
@@ -83,5 +76,61 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.394" />
+
+    <TextView
+        android:id="@+id/textViewLoadingHint"
+        android:layout_width="393dp"
+        android:layout_height="55dp"
+        android:layout_gravity="center"
+        android:text="🧠 Đang suy nghĩ... hy vọng không phải quá lâu!"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#888888"
+        android:textAlignment="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/buttonSubmitTest"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.516"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.63" />
+
+    <TextView
+        android:id="@+id/textViewCountdown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Thời gian còn lại: 60 giây"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="#888888"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.459"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.696" />
+
+    <ImageView
+        android:id="@+id/aiAvatarLoading"
+        android:layout_width="261dp"
+        android:layout_height="262dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/buttonSubmitTest"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.247"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.336"
+        app:srcCompat="@drawable/avatar_ai" />
+
+    <ProgressBar
+        android:id="@+id/progressBarTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
