--- a/app/src/main/res/layout/fragment_saved_words.xml
+++ b/app/src/main/res/layout/fragment_saved_words.xml
@@ -99,6 +99,8 @@
         android:id="@+id/recyclerViewSavedWords"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="100dp"
+        android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -111,7 +113,9 @@
         android:text="Ôn tập"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
 
     <ProgressBar
         android:id="@+id/progressBarSavedWords"
