--- a/app/src/main/res/layout/activity_passage_quiz.xml
+++ b/app/src/main/res/layout/activity_passage_quiz.xml
@@ -5,29 +5,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PassageQuizActivity"> <ProgressBar
-    android:id="@+id/progressBar"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="32dp"
-    android:visibility="gone"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    tools:context=".PassageQuizActivity">
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/aiAvatar" />
 
     <TextView
         android:id="@+id/textViewLoadingHint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
-        android:text="Generating passage quiz..."
         android:visibility="gone"
+        android:text="Generating passage quiz..."
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+        app:layout_constraintTop_toBottomOf="@+id/aiAvatar" />
 
     <TextView
         android:id="@+id/textViewCountdown"
@@ -41,14 +44,15 @@
 
     <ImageView
         android:id="@+id/aiAvatar"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_launcher_foreground" android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="191dp"
+        android:layout_height="207dp"
+        android:layout_marginTop="184dp"
+        android:visibility="gone"
+        android:src="@drawable/avatar_ai"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.462"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCountdown"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -72,6 +76,7 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textSize="16sp"
+                android:textIsSelectable="true"
                 android:textColor="@android:color/black"
                 android:layout_marginBottom="16dp"
                 tools:text="This is an example passage with (1) blanks and (2) more to fill in."/>
@@ -101,8 +106,8 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:padding="16dp"
-        android:gravity="center_horizontal|center_vertical"
         android:visibility="visible"
+        android:gravity="center_horizontal|center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +125,7 @@
             android:id="@+id/customTopicEditTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter custom passage topic (optional)"
+            android:hint="Chọn chủ đề nếu muốn..."
             android:padding="12dp"
             android:background="@drawable/rounded_edittext_background" android:layout_marginBottom="16dp"
             android:imeOptions="actionDone"
@@ -132,7 +137,7 @@
             android:id="@+id/buttonStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start Passage Quiz"
+            android:text="Bắt đầu"
             android:paddingStart="24dp"
             android:paddingEnd="24dp"
             android:paddingTop="12dp"
@@ -146,7 +151,7 @@
         android:id="@+id/buttonSubmit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="Nộp bài"
         android:padding="16dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
