--- a/app/src/main/res/layout/item_test_question.xml
+++ b/app/src/main/res/layout/item_test_question.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:textIsSelectable="true"
         android:textSize="16sp"
         android:text="Nội dung câu hỏi ở đây?"/>
 
