--- a/app/src/main/res/layout/activity_passage_quiz.xml
+++ b/app/src/main/res/layout/activity_passage_quiz.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PassageQuizActivity">
+    tools:context=".ui.PassageQuizActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
