--- a/app/src/main/res/layout/activity_role_play.xml
+++ b/app/src/main/res/layout/activity_role_play.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RolePlayActivity">
+    tools:context=".ui.RolePlayActivity">
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
