--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,6 +1,5 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-
-    <corners android:radius="20dp"/> <!-- Bo góc 20dp -->
-    <solid android:color="@color/blue"/> <!-- Dùng màu đã định nghĩa -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#5A67D8" />
+    <corners android:radius="16dp" />
+    <padding android:left="12dp" android:top="12dp" android:right="12dp" android:bottom="12dp" />
 </shape>
