--- a/app/src/main/res/layout/activity_image_learning.xml
+++ b/app/src/main/res/layout/activity_image_learning.xml
@@ -60,7 +60,12 @@
         android:layout_height="wrap_content"
         android:hint="Nhập tin nhắn..."
         android:layout_marginEnd="8dp" />
-
+    <ImageButton
+        android:id="@+id/micButtonIMG"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_btn_speak_now"
+        android:contentDescription="Nhận diện giọng nói" />
     <Button
         android:id="@+id/sendButton"
         android:layout_width="wrap_content"
