--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/messageImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_weight="1"
         android:visibility="gone"
         tools:srcCompat="@tools:sample/avatars" />
