refactor setting fragment

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,6 +17,6 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.lingobuddypck.ui.notifications.NotificationsFragment"
+        android:name="com.example.lingobuddypck.ui.setting.SettingFragment"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
